# Label-free-CBM

./: GPT_conceptset_processor.ipynb  GPT_initial_concepts.ipynb  data_utils.py  pyproject.toml
clip/: clip.py
data/concept_sets/: cifar10_filtered_new.txt
data/concept_sets/gpt3_init/: gpt3_cifar100_around_new.json  gpt3_cifar100_important_new.json  gpt3_cifar100_superclass_new.json  gpt3_cifar10_around_new.json  gpt3_cifar10_important_new.json  gpt3_cifar10_superclass_new.json
